<resources>
    <!--앱 이름-->
    <string name="app_name">HKU</string>

    <!--상단의 텍스트뷰-->
    <string name="hello_world">Good Morning~!!</string>

    <!--하단의 텍스트뷰-->
    <string name="testWord1">맛점하세요~</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="test1">네이버접속</string>
    <string name="test2">전화걸기</string>
    <string name="test3">클릭이벤트로 버튼클릭했어요</string>
    <string name="test4">id로 클릭하여 이벤트 발생</string>
    <string name="test5">버튼 토스트 메시지 재정의</string>
    <string name="test7">이미지 COPY</string>
    <string name="test8">이미지 VISIBLE</string>
    <string name="m_nm1">1.Linear</string>
    <string name="m_nm2">2.weight</string>
    <string name="m_nm3">3.Table</string>
    <string name="m_nm4">4.Frame&amp;img</string>
    <string name="m_nm5">5.EditText</string>
    <string name="m_nm6">6.Mission193</string>
    <string name="m_nm7">7.OpenActivity</string>
    <string name="m_nm8">8.Mission271</string>
    <string name="m_nm9">9.TouchEvent</string>
    <string name="m_nm10">10.Mission332</string>
    <string name="m_nm11">11.Mission333</string>
    <string name="m_nm12">12.ListView</string>
    <string name="m_nm13">13.BaseAdapter</string>
    <string name="m_nm14">14.ArrayAdapter</string>
    <string name="m_nm15">15.null</string>

    <string name="spinner_exam_prompt1">Choose a Color</string>
    <string name="spinner_table_prompt">타입 선택</string>

    <string name="pkg_network_nm1">Socket Chating</string>




    <string name="title_activity_relative_layout_exam">RelativeLayoutExamActivity</string>
    <string name="title_activity_table_layout_exam">TableLayoutExamActivity</string>
    <string name="title_activity_frame_layout_exam">FrameLayoutExamActivity</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <string name="title_activity_mission_193_page">Mission_193Page</string>
    <string name="title_activity_activity_exam">ActivityExamActivity</string>
    <string name="title_activity_target_exam">TargetExamActivity</string>
    <string name="title_activity_mission_271_page">Mission_271Page</string>
    <string name="title_activity_mission_271_page_sub1">Mission_271Page_sub1</string>
    <string name="title_activity_touch_event">TouchEventActivity</string>
    <string name="title_activity_mission_332_page">Mission_332Page</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_mission_333_page">Mission_333Page</string>
    <string name="title_activity_list_view_exam">ListViewExam</string>
    <string name="title_activity_custom_basc_adapter">customBascAdapter</string>
    <string name="title_activity_custom_base_adapter">customBaseAdapter</string>
    <string name="title_activity_item_use_base_adapter">item_useBaseAdapter</string>
    <string name="title_activity_adapter_list_exam1_main">adapterListExam1_Main</string>
    <string name="title_activity_adapter_list_exam1_pkg_activity">adapterListExam1_pkg_activity
    </string>
    <string name="title_activity_adapter_list_exam1_pkg_event">adapterListExam1_pkg_event</string>
    <string name="title_activity_adapter_list_exam1_pkg_list_view">adapterListExam1_pkg_ListView
    </string>
    <string name="title_activity_adapter_list_exam1_pkg_mission">adapterListExam1_pkg_mission
    </string>
    <string name="title_activity_adapter_list_exam2_main">실습메인</string>
    <string name="title_activity_adapter_list_exam2_sub">AdapterListExam2_Sub</string>
    <string name="title_activity_spinner_exam">SpinnerExam</string>
    <string name="title_activity_grid_view_calendar">GridView_Calendar</string>
    <string name="title_activity_mission_392_page">Mission_392Page</string>
    <string name="title_activity_thread01_run">thread01_run</string>
    <string name="title_activity_thread02_progress">thread02_progress</string>
    <string name="title_activity_thread03_async_task">thread03_AsyncTask</string>
    <string name="title_activity_thread03_runnable">thread03_Runnable</string>
    <string name="title_activity_xml_parser_test">xml_Parser_test</string>
    <string name="title_activity_xml_json_test">xml_json_test</string>
    <string name="title_activity_thread05_login">thread05_Login</string>
    <string name="title_activity_thread06_stop_watch">thread06_StopWatch</string>
    <string name="title_activity_thread07_stop_watch">thread07_StopWatch</string>
    <string name="title_activity_parsing01_main">Parsing01_Main</string>
    <string name="title_activity_parsing04_web_view">Parsing04_WebView</string>
    <string name="title_activity_api_test_google_map">API_Test_GoogleMap</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="title_activity_google_api_map">Google_API_Map</string>
    <string name="title_activity_parsing06_you_tube">Parsing06_YouTube</string>
    <string name="title_activity_thread08_delay_runnable">thread08_DelayRunnable</string>
    <string name="title_activity_thread09_looper">thread09_Looper</string>
    <string name="title_activity_db01_create">DB01_Create</string>
    <string name="title_activity_db02_db_search_use_helper">DB02_DB_SearchUseHelper</string>
    <string name="title_activity_db03_table">DB03_TableActivity</string>
    <string name="title_activity_tour_list_db_">TourList_DB_Activity</string>
    <string name="title_activity_tour_list_codemt_activity">TourList_CODEMT_Activity</string>
    <string name="title_activity_tour_list_codemt_adapter">TourList_CODEMT_Adapter</string>
    <string name="title_activity_tour_list_listmt_adapter">TourList_LISTMT_Adapter</string>
    <string name="title_activity_tour_list_listmt_">TourList_LISTMT_Activity</string>
    <string name="title_activity_tour_list_photodt_adapter">TourList_PHOTODT_Adapter</string>
    <string name="title_activity_tour_list_photodt_">TourList_PHOTODT_Activity</string>
    <string name="title_activity_daum_api_map">Daum_API_Map</string>
    <string name="title_activity_db04_shared_preferences">DB04_SharedPreferences</string>
    <string name="title_activity_db05_file_save">DB05_FileSave</string>
    <string name="title_activity_mission_593_page">Mission_593Page</string>
    <string name="title_activity_socket_chat">Socket_Chat</string>
    <string name="title_activity_remote_socket_chat">Remote_Socket_Chat</string>
    <string name="title_activity_action_bar_exam">ActionBarExamActivity</string>
    <string name="title_activity_custom_action_bar">CustomActionBar</string>
    <string name="title_activity_remocon_client">Remocon_Client</string>
    <string name="title_activity_camera_intent">Camera_Intent</string>
    <string name="title_activity_camera_surface">Camera_Surface</string>
    <string name="title_activity_media_player">MediaPlayer Audio</string>
    <string name="title_activity_media_player_audio_sdcard">MediaPlayer_Audio_SDCARD</string>
    <string name="title_activity_seek_bar_custom_design">SeekBarCustomDesign</string>
    <string name="title_activity_media_player_video">MediaPlayer_Video</string>
    <string name="title_activity_mission_612_page">Mission_612p 동영상 목록</string>
    <string name="title_activity_mission_612_page_video">HKU 동영상 플레이어</string>
    <string name="title_activity_gps_location_exam">GPS_LocationExam</string>
    <string name="title_activity_location_location_manager">Location_LocationManager</string>
    <string name="title_activity_gps_exam1_location_manager">GPS_exam1_LocationManager</string>
    <string name="title_activity_gps_exam2_google_api_client">GPS_exam2_GoogleApiClient</string>
    <string name="title_activity_gps_exam3_map_my_area">GPS_exam3_MapMyArea</string>
    <string name="title_activity_notice_exam1_notification">Notice_exam1_Notification</string>
    <string name="title_activity_notice_exam2_notification2">Notice_exam2_Notification2</string>
    <string name="title_activity_main">MainActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exam01_main">exam01_main</string>
    <string name="title_activity_fragment_exam01_main">fragment_exam01_main</string>
    <string name="title_activity_fragment_exam01_frag_image">fragment_exam01_FragImage</string>
    <string name="title_activity_fragment_exam01_image_main">fragment_exam01_ImageMain</string>
    <string name="title_activity_exam02_main">exam02_Main</string>
    <string name="title_activity_exam1_activity_for_result">exam1_ActivityForResult</string>
    <string name="title_activity_exam1_open1">exam1_Open1</string>
    <string name="title_activity_exam1_open2">exam1_Open2</string>
    <string name="title_activity_exam03_view_pager">exam03_ViewPager</string>
    <string name="title_activity_exam04_main">exam04_Main</string>
    <string name="title_activity_exam05_effective_navigation">exam05_EffectiveNavigation</string>
    <string name="title_activity_exam05_main">exam05_Main</string>
    <string name="title_activity_exam05_pager_tab">exam05_PagerTab</string>
    <string name="title_activity_exam05_pager_title">exam05_PagerTitle</string>
    <string name="title_activity_exam06_sliding_tab">PagerSlidingTabStrip</string>
    <string name="title_activity_exam07_action_bar_tab">exam07_ActionBarTab</string>
    <string name="title_activity_exam07_tab1">exam07_Tab1</string>
    <string name="title_activity_exam07_tab2">exam07_Tab2</string>
    <string name="title_activity_exam07_tab3">exam07_Tab3</string>
    <string name="title_activity_exam01__main">Exam01_Main</string>
    <string name="title_activity_exam02__main">Exam02_Main</string>
    <string name="title_activity_exam03__main">Exam03_Main</string>
    <string name="title_activity_exam04__main">Exam04_Main</string>
    <string name="title_activity_gps_exam4__speed">GPS_exam4_Speed</string>
    <string name="title_activity_custom_player__audio__list">CustomPlayer_Audio_List</string>
    <string name="title_activity_navigation_fragment">NavigationFragment</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_exam05__media_db">Exam05_MediaDB</string>
    <string name="title_activity_floating_button">FloatingButton</string>
    <string name="title_activity_coordinator_layout">CoordinatorLayout</string>
    <string name="title_activity_coordinator_layout__snackbar">CoordinatorLayout_Snackbar</string>
    <string name="title_activity_floating_action_menu_01__exams">FloatingActionMenu_01_Exams
    </string>
    <string name="title_activity_floating_action_menu_02__one">FloatingActionMenu_02_One</string>
    <string name="title_activity_floating_action_menu_03__red">FloatingActionMenu_03_Red</string>
    <string name="title_activity_floating_menu_library_01__exams">FloatingMenuLibrary_01_Exams
    </string>
    <string name="title_activity_floating_menu_library_02__one">FloatingMenuLibrary_02_One</string>

</resources>
