<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.helloandroid.pkg_activity.MainMenuActivity">

    <!--메뉴 테이블 레이아웃 추가-->
    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_gravity="top">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp">
        </View>

        <TableRow>

            <Button
                android:text="@string/m_nm1"
                android:onClick="onButtonClick_Open1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff1a2465"
                android:textColor="#FFFFFF"
                android:layout_marginRight="5dp"
                />

            <Button
                android:text="@string/m_nm2"
                android:onClick="onButtonClick_Open2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff42aa58"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                />

            <Button
                android:text="@string/m_nm3"
                android:onClick="onButtonClick_Open3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff1a2465"
                android:textColor="#FFFFFF"
                />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </View>

        <TableRow>

            <Button
                android:text="@string/m_nm4"
                android:onClick="onButtonClick_Open4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff42aa58"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                />

            <Button
                android:text="@string/m_nm5"
                android:onClick="onButtonClick_Open5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff1a2465"
                android:textColor="#FFFFFF"
                android:layout_marginRight="5dp"
                />

            <Button
                android:text="@string/m_nm6"
                android:onClick="onButtonClick_Open6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff42aa58"
                android:textColor="#000000"
                />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </View>

        <TableRow>

            <Button
                android:text="@string/m_nm7"
                android:onClick="onButtonClick_Open7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff1a2465"
                android:textColor="#FFFFFF"
                android:layout_marginRight="5dp"
                />

            <Button
                android:text="@string/m_nm8"
                android:onClick="onButtonClick_Open8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff42aa58"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                />

            <Button
                android:text="@string/m_nm9"
                android:onClick="onButtonClick_Open9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff1a2465"
                android:textColor="#FFFFFF"
                />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </View>

        <TableRow>

            <Button
                android:text="@string/m_nm10"
                android:onClick="onButtonClick_Open10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff42aa58"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                />

            <Button
                android:text="@string/m_nm11"
                android:onClick="onButtonClick_Open11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff1a2465"
                android:textColor="#FFFFFF"
                android:layout_marginRight="5dp"
                />

            <Button
                android:text="@string/m_nm12"
                android:onClick="onButtonClick_Open10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff42aa58"
                android:textColor="#000000"
                />

        </TableRow>

    </TableLayout>

</LinearLayout>
